<resources>
    <string name="app_name">闪付</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">log out</string>
    <string name="editText">Please input your message</string>
    <string name="title_activity_display_message">After sign in</string>
    <string name="title_activity_sign_in">Sign in</string>

    <string name="title_section1">我的账户</string>
    <string name="title_section2">商品入库</string>
    <string name="title_section3">用户消费</string>
    <string name="title_section4">设置</string>

    <string name="balanceTitle">营业额:</string>

    <string name="title_section2_1">我的账户</string>
    <string name="title_section2_2">购买商品</string>
    <string name="title_section2_3">制作钱包</string>
    <string name="title_section2_4">我的朋友</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="bill_image">pain_or_gain</string>
    <string name="bill_date_hint">date</string>
    <string name="bill_money_hint">amount</string>

    <string name="spin_prompt">请选择钱包</string>
    <string name="bills">账单</string>
    <string name="fail_to_load_bill_prompt">加载账单失败!</string>
    <string name="bill_comment_hint">bill comment</string>

    <string name="item_name">商品名称</string>
    <string name="item_number">数量</string>
    <string name="item_price">单价</string>
    <string name="all_price">总计</string>
    <string name="item_hint">提示：将NFC芯片置于手机的合适位置以读取用户ID~</string>
    <string name="goods_in_hint">提示：输入以下信息，将NFC芯片置于手机的合适位置以写入商品信息~</string>
    <string name="item_hint_1">提示：将手机放置芯片附近读取商品相关信息~</string>
    <string name="wallet_hint">提示：输入以下信息，将芯片放置手机NFC芯片处制作虚拟钱包~</string>
    <string name="balance">余额</string>
    <string name="account">账号</string>
    <string name="item_scan">扫描芯片</string>
    <string name="item_buy">购买商品</string>
    <string name="createwallet">创建钱包</string>
    <string name="reset">重置</string>
    <string name="description">商品描述</string>
    <string name="bill_fetch_error_hint">错误原因</string>
    <string name="username">用户名</string>
    <string name="login_username_hint">输入用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="seller">商家</string>
    <string name="custom">客户</string>
    <string name="register">没用账号？<a href="#">注册</a></string>
    <string name="password_hint">请输入密码</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="guider">导航</string>
    <string name="recharge_hint">请输入充值金额</string>
    <string name="recharge">充值</string>
    <string name="recharge_cancel">取消</string>
    <string-array name="friend">
        <item>李泉来</item>
        <item>习近平</item>
        <item>沈超楠</item>
        <item>史飞超</item>
        <item>包君泽</item>
        <item>杜振安</item>
        <item>李岩</item>
        <item>直男</item>
        <item>腐女</item>
        <item>鬼父文</item>
        <item>优衣库</item>
    </string-array>
</resources>
