<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <View android:layout_height="1dp"

          android:layout_width="match_parent"
          android:background="#aaa"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bill_fragment_height"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <ImageView
                android:id="@+id/bill_image"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/bill_image"
                android:src="@drawable/pain"/>

        <LinearLayout
                android:id="@+id/bill_father"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
            <TextView
                    android:id="@+id/bill_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bill_comment_hint"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/bill_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/bill_date_hint"
                    android:textSize="13sp"
                    android:text="07-19"
                    android:gravity="bottom"/>
        </LinearLayout>

        <TextView
                android:id="@+id/bill_amount"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:hint="@string/bill_money_hint"
                android:singleLine="true"
                android:textSize="20sp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:gravity="end|center_vertical"/>

    </LinearLayout>
</LinearLayout>